Enhance Java lecture slides with comprehensive content for 1-hour sessions
Enhanced 5 lectures that previously had insufficient content:
- Lecture 01: Introduction to Java (494→875 lines, +77%)
- Lecture 02: Java Environment and Program Structure (764→1340 lines, +75%)
- Lecture 03: Java Program Structure and Comments (841→1909 lines, +127%)
- Lecture 04: Data Types and Variables (927→1865 lines, +101%)
- Lecture 07: Assignment and Special Operators (947→1628 lines, +72%)

Added comprehensive content including:
- Real-world applications and industry examples
- Advanced concepts and best practices
- Troubleshooting guides and common mistakes
- Interactive elements and hands-on exercises
- Professional coding standards and optimization techniques
- GTU syllabus compliance maintained throughout

All lectures now contain 50+ minutes of material suitable for classroom instruction.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>